# tree-sitter-goto

./: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-goto.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_goto/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGoto/: goto.h
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
