[package]
name = "tree-sitter-goto"
description = "Goto grammar for tree-sitter"
version = "0.0.1"
authors = [
	"Antonius Naumann <git@antonius.dev>",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "go", "goto"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/goto-lang/tree-sitter-goto"
edition = "2018"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.20, < 0.21"

[build-dependencies]
cc = "1.0"
